[tool.poetry]
name = "caching"
version = "0.1.0"
description = ""
license = "MIT"
readme = "README.md"
packages = [{ include = "caching" }]
authors = ["dynalz <git@pulsar.finance>"]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
